--- a/MagicGradientsApp/MainPage.xaml
+++ b/MagicGradientsApp/MainPage.xaml
@@ -1,24 +1,53 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:magic="clr-namespace:MagicGradients;assembly=MagicGradients"
              x:Class="MagicGradientsApp.MainPage">
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Welcome to Magic Gradients!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
+        <Label Text="Start painting gradients now" FontSize="Title" Padding="30,10,30,10"/>
+        <Label Text="Drop GradientView to your XAML file and see magic happening. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
         <Label FontSize="16" Padding="30,24,30,0">
             <Label.FormattedText>
                 <FormattedString>
                     <FormattedString.Spans>
                         <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
+                        <Span Text="https://github.com/mgierlasinski/MagicGradients" FontAttributes="Bold"/>
                     </FormattedString.Spans>
                 </FormattedString>
             </Label.FormattedText>
         </Label>
+
+        <magic:GradientView VerticalOptions="FillAndExpand">
+            <magic:LinearGradient>
+                <magic:GradientStop Color="Yellow" />
+                <magic:GradientStop Color="Blue" />
+                <magic:GradientStop Color="Pink" />
+            </magic:LinearGradient>
+        </magic:GradientView>
+        <magic:GradientView VerticalOptions="FillAndExpand">
+            <magic:CssGradientSource>
+                <x:String>
+                    <![CDATA[
+                    linear-gradient(242deg, red, green, orange)
+                ]]>
+                </x:String>
+            </magic:CssGradientSource>
+        </magic:GradientView>
+        <magic:GradientView VerticalOptions="FillAndExpand" StyleClass="magicGradient" />
+        <BoxView VerticalOptions="FillAndExpand">
+            <BoxView.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="Yellow" Offset="0" />
+                    <GradientStop Color="Blue" Offset="0.5" />
+                    <GradientStop Color="Pink" Offset="1" />
+                </LinearGradientBrush>
+            </BoxView.Background>
+        </BoxView>
+        <BoxView VerticalOptions="FillAndExpand" StyleClass="brushGradient" />
     </StackLayout>
 
 </ContentPage>
