--- a/MagicGradientsApp/Styles.css
+++ b/MagicGradientsApp/Styles.css
@@ -2,6 +2,10 @@
     background: linear-gradient(90deg, rgb(255,0,0), rgb(0,255,0));
 }
 
+.MaskGradient {
+    background: linear-gradient(45deg, red, orange);
+}
+
 .BrushGradient {
     background: linear-gradient(90deg, rgb(255,0,0) 0%, rgb(0,255,0) 100%);
 }
