--- a/MagicGradientsApp/Styles.css
+++ b/MagicGradientsApp/Styles.css
@@ -6,6 +6,10 @@
     background: linear-gradient(45deg, red, orange);
 }
 
+.RainbowGradient {
+    background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+
 .BrushGradient {
     background: linear-gradient(90deg, rgb(255,0,0) 0%, rgb(0,255,0) 100%);
 }
