--- a/MagicGradientsApp/Pages/MasksPage.xaml
+++ b/MagicGradientsApp/Pages/MasksPage.xaml
@@ -2,20 +2,42 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:magic="http://magic.com/schemas/gradients"
+             xmlns:controls="clr-namespace:MagicGradientsApp.Controls;assembly=MagicGradientsApp"
              x:Class="MagicGradientsApp.Pages.MasksPage"
              Title="Masks">
 
     <ScrollView>
         <StackLayout Margin="15" Spacing="15">
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView StyleClass="MaskGradient">
+            <controls:SnippetFrame Title="ClipMode: Include">
+                <magic:GradientView StyleClass="RainbowGradient" WidthRequest="180" Margin="15" HorizontalOptions="Center">
                     <magic:GradientView.Mask>
-                        <magic:RectangleMask Size="90%" Corners="50,0,50,0" />
+                        <magic:PathMask Stretch="AspectFit" 
+                                        Data="M73.866 0c-6.914.015-13.682 3.94-17.162 9.927L2.57 103.963c-3.427 6.003-3.427 13.85 0 19.853l54.134 94.037c3.48 5.987 10.248 9.913 17.162 9.927h108.268c6.914-.015 13.682-3.94 17.162-9.927l54.134-94.037c3.427-6.003 3.426-13.85 0-19.853L199.296 9.927C195.816 3.939 189.048.014 182.134 0H73.866zm.983 55.013c.149-.015.305-.015.454 0h18.674a2.462 2.462 0 0 1 2.042 1.212l31.679 56.452c.16.28.262.59.3.91.04-.32.142-.63.302-.91l31.603-56.452a2.47 2.47 0 0 1 2.117-1.212h18.675c1.653.014 2.892 2.097 2.117 3.561l-30.923 55.316 30.923 55.24c.848 1.472-.42 3.651-2.117 3.637H162.02a2.47 2.47 0 0 1-2.117-1.288L128.3 115.026c-.16-.279-.262-.59-.301-.909a2.43 2.43 0 0 1-.301.91l-31.68 56.452a2.468 2.468 0 0 1-2.04 1.288H75.302c-1.697.015-2.965-2.165-2.117-3.637l30.923-55.24-30.923-55.316c-.741-1.336.163-3.276 1.663-3.561z" />
                     </magic:GradientView.Mask>
                 </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame" Padding="15">
-                <magic:GradientView StyleClass="MaskGradient">
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="ClipMode: Exclude">
+                <magic:GradientView StyleClass="RainbowGradient">
+                    <magic:GradientView.Mask>
+                        <magic:PathMask Stretch="AspectFit" 
+                                        ClipMode="Exclude"
+                                        Data="M73.866 0c-6.914.015-13.682 3.94-17.162 9.927L2.57 103.963c-3.427 6.003-3.427 13.85 0 19.853l54.134 94.037c3.48 5.987 10.248 9.913 17.162 9.927h108.268c6.914-.015 13.682-3.94 17.162-9.927l54.134-94.037c3.427-6.003 3.426-13.85 0-19.853L199.296 9.927C195.816 3.939 189.048.014 182.134 0H73.866zm.983 55.013c.149-.015.305-.015.454 0h18.674a2.462 2.462 0 0 1 2.042 1.212l31.679 56.452c.16.28.262.59.3.91.04-.32.142-.63.302-.91l31.603-56.452a2.47 2.47 0 0 1 2.117-1.212h18.675c1.653.014 2.892 2.097 2.117 3.561l-30.923 55.316 30.923 55.24c.848 1.472-.42 3.651-2.117 3.637H162.02a2.47 2.47 0 0 1-2.117-1.288L128.3 115.026c-.16-.279-.262-.59-.301-.909a2.43 2.43 0 0 1-.301.91l-31.68 56.452a2.468 2.468 0 0 1-2.04 1.288H75.302c-1.697.015-2.965-2.165-2.117-3.637l30.923-55.24-30.923-55.316c-.741-1.336.163-3.276 1.663-3.561z" />
+                    </magic:GradientView.Mask>
+                </magic:GradientView>
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Rectangle Mask">
+                <magic:GradientView StyleClass="RainbowGradient">
+                    <magic:GradientView.Mask>
+                        <magic:RectangleMask Size="90%,80%" Corners="50,0,50,0" />
+                    </magic:GradientView.Mask>
+                </magic:GradientView>
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Rectangle Exclude">
+                <magic:GradientView Mask="{magic:Rectangle '80%,70%', Corners='40', ClipMode=Exclude}" 
+                                    StyleClass="RainbowGradient" />
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Custom Corners">
+                <magic:GradientView StyleClass="RainbowGradient" Margin="15">
                     <magic:GradientView.Mask>
                         <magic:RectangleMask>
                             <magic:RectangleMask.Corners>
@@ -24,53 +46,33 @@
                         </magic:RectangleMask>
                     </magic:GradientView.Mask>
                 </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView Mask="{magic:Rectangle '90%', Corners='40'}" StyleClass="MaskGradient" />
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView StyleClass="MaskGradient">
-                    <magic:GradientView.Mask>
-                        <magic:EllipseMask Size="90%" />
-                    </magic:GradientView.Mask>
-                </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView Mask="{magic:Ellipse '150,150'}" StyleClass="MaskGradient" />
-            </Frame>
-            <Frame StyleClass="SnippetFrame" Padding="15">
-                <magic:GradientView StyleClass="MaskGradient">
-                    <magic:GradientView.Mask>
-                        <magic:TextMask Text="Hello!" FontSize="80" FontAttributes="Bold,Italic" />
-                    </magic:GradientView.Mask>
-                </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView Mask="{magic:Text 'Hello!', Stretch=AspectFit, ClipMode=Exclude}" StyleClass="MaskGradient" />
-            </Frame>
-            <Frame StyleClass="SnippetFrame" Padding="15">
-                <magic:GradientView StyleClass="RainbowGradient" WidthRequest="220" HorizontalOptions="Center">
-                    <magic:GradientView.Mask>
-                        <magic:PathMask Stretch="AspectFit" 
-                                        Data="M73.866 0c-6.914.015-13.682 3.94-17.162 9.927L2.57 103.963c-3.427 6.003-3.427 13.85 0 19.853l54.134 94.037c3.48 5.987 10.248 9.913 17.162 9.927h108.268c6.914-.015 13.682-3.94 17.162-9.927l54.134-94.037c3.427-6.003 3.426-13.85 0-19.853L199.296 9.927C195.816 3.939 189.048.014 182.134 0H73.866zm.983 55.013c.149-.015.305-.015.454 0h18.674a2.462 2.462 0 0 1 2.042 1.212l31.679 56.452c.16.28.262.59.3.91.04-.32.142-.63.302-.91l31.603-56.452a2.47 2.47 0 0 1 2.117-1.212h18.675c1.653.014 2.892 2.097 2.117 3.561l-30.923 55.316 30.923 55.24c.848 1.472-.42 3.651-2.117 3.637H162.02a2.47 2.47 0 0 1-2.117-1.288L128.3 115.026c-.16-.279-.262-.59-.301-.909a2.43 2.43 0 0 1-.301.91l-31.68 56.452a2.468 2.468 0 0 1-2.04 1.288H75.302c-1.697.015-2.965-2.165-2.117-3.637l30.923-55.24-30.923-55.316c-.741-1.336.163-3.276 1.663-3.561z" />
-                    </magic:GradientView.Mask>
-                </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Ellipse Mask">
                 <magic:GradientView StyleClass="RainbowGradient">
                     <magic:GradientView.Mask>
-                        <magic:PathMask Stretch="AspectFit" 
-                                        ClipMode="Exclude"
-                                        Data="M73.866 0c-6.914.015-13.682 3.94-17.162 9.927L2.57 103.963c-3.427 6.003-3.427 13.85 0 19.853l54.134 94.037c3.48 5.987 10.248 9.913 17.162 9.927h108.268c6.914-.015 13.682-3.94 17.162-9.927l54.134-94.037c3.427-6.003 3.426-13.85 0-19.853L199.296 9.927C195.816 3.939 189.048.014 182.134 0H73.866zm.983 55.013c.149-.015.305-.015.454 0h18.674a2.462 2.462 0 0 1 2.042 1.212l31.679 56.452c.16.28.262.59.3.91.04-.32.142-.63.302-.91l31.603-56.452a2.47 2.47 0 0 1 2.117-1.212h18.675c1.653.014 2.892 2.097 2.117 3.561l-30.923 55.316 30.923 55.24c.848 1.472-.42 3.651-2.117 3.637H162.02a2.47 2.47 0 0 1-2.117-1.288L128.3 115.026c-.16-.279-.262-.59-.301-.909a2.43 2.43 0 0 1-.301.91l-31.68 56.452a2.468 2.468 0 0 1-2.04 1.288H75.302c-1.697.015-2.965-2.165-2.117-3.637l30.923-55.24-30.923-55.316c-.741-1.336.163-3.276 1.663-3.561z" />
+                        <magic:EllipseMask Size="90%,80%" />
                     </magic:GradientView.Mask>
                 </magic:GradientView>
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView Mask="{magic:Path 'M 0 -100 L 58.8 90.9, -95.1 -30.9, 95.1 -30.9, -58.8 80.9 Z', ClipMode=Exclude, Stretch=AspectFit}"
-                                    StyleClass="MaskGradient" />
-            </Frame>
-            <Frame StyleClass="SnippetFrame">
-                <magic:GradientView StyleClass="MaskGradient">
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Circle Mask">
+                <magic:GradientView Mask="{magic:Ellipse '150,150'}" StyleClass="RainbowGradient" />
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Text Mask">
+                <magic:GradientView StyleClass="RainbowGradient" Margin="15">
+                    <magic:GradientView.Mask>
+                        <magic:TextMask Text="Magic!" Stretch="AspectFit" FontAttributes="Bold,Italic" />
+                    </magic:GradientView.Mask>
+                </magic:GradientView>
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Text Mask Exclude">
+                <magic:GradientView Mask="{magic:Text 'Magic!', Stretch=AspectFit, ClipMode=Exclude, FontAttributes=Italic}" StyleClass="RainbowGradient" />
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Path Mask">
+                <magic:GradientView Mask="{magic:Path 'M 0 -100 L 58.8 90.9, -95.1 -30.9, 95.1 -30.9, -58.8 80.9 Z', Stretch=AspectFit}"
+                                    StyleClass="RainbowGradient" WidthRequest="170" Margin="15" HorizontalOptions="Center" />
+            </controls:SnippetFrame>
+            <controls:SnippetFrame Title="Mask Collection">
+                <magic:GradientView StyleClass="RainbowGradient" WidthRequest="200" HorizontalOptions="Center">
                     <magic:GradientView.Mask>
                         <magic:MaskCollection>
                             <magic:EllipseMask Size="200,200" />
@@ -80,7 +82,7 @@
                         </magic:MaskCollection>
                     </magic:GradientView.Mask>
                 </magic:GradientView>
-            </Frame>
+            </controls:SnippetFrame>
         </StackLayout>
     </ScrollView>
 
